force-app/main/default/objects/Candidate__c/fields/Active_Broker__c.field-meta.xml
<CustomField>
    <fullName>Active_Broker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Broker</label>
    <type>Checkbox</type>
</CustomField>