force-app/main/default/objects/Candidate__c/fields/Additional_Securities_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Additional_Securities_Licenses__c</fullName>
    <label>Additional Securities Licenses</label>
    <length>50</length>
    <type>Text</type>
</CustomField>