force-app/main/default/objects/Candidate__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A007</fullName>
            </value>
            <value>
                <fullName>A026</fullName>
            </value>
            <value>
                <fullName>A157</fullName>
            </value>
            <value>
                <fullName>A255</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>