force-app/main/default/objects/Candidate__c/fields/AI_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>AI_Completed_Date_Time__c</fullName>
    <label>AI Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>