force-app/main/default/objects/Candidate__c/fields/AI_Conducted_By__c.field-meta.xml
<CustomField>
    <fullName>AI_Conducted_By__c</fullName>
    <description>Interviewer who conducted the Attraction Interview.</description>
    <label>AI Conducted By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interviewers</valueSetName>
    </valueSet>
</CustomField>