force-app/main/default/objects/Candidate__c/fields/ALC__c.field-meta.xml
<CustomField>
    <fullName>ALC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ALC</label>
    <referenceTo>ALC__c</referenceTo>
    <relationshipName>Candidates_Nominators</relationshipName>
    <type>Lookup</type>
</CustomField>