force-app/main/default/objects/Candidate__c/fields/All_Notes__c.field-meta.xml
<CustomField>
    <fullName>All_Notes__c</fullName>
    <label>All Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>