force-app/main/default/objects/Candidate__c/fields/Attraction_Interview_Conducted_By__c.field-meta.xml
<CustomField>
    <fullName>Attraction_Interview_Conducted_By__c</fullName>
    <label>Attraction Interview Conducted By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>