force-app/main/default/objects/Candidate__c/fields/Attraction_Interview_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Attraction_Interview_Date_Completed__c</fullName>
    <label>Attraction Interview Date Completed</label>
    <type>Date</type>
</CustomField>