force-app/main/default/objects/Candidate__c/fields/Attraction_Interview_Date_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Attraction_Interview_Date_Scheduled__c</fullName>
    <label>Attraction Interview Date Scheduled</label>
    <type>Date</type>
</CustomField>