force-app/main/default/objects/Candidate__c/fields/Attraction_Interview_Tally__c.field-meta.xml
<CustomField>
    <fullName>Attraction_Interview_Tally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attraction Interview Tally</label>
    <type>Checkbox</type>
</CustomField>