force-app/main/default/objects/Candidate__c/fields/Candidate_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to find candidate by full name</description>
    <label>Candidate Lookup</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates_Nominators</relationshipName>
    <type>Lookup</type>
</CustomField>