force-app/main/default/objects/Candidate__c/fields/Candidate_Num__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Num__c</fullName>
    <label>Candidate Num.</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>