force-app/main/default/objects/Candidate__c/fields/Candidate_Number__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Number__c</fullName>
    <displayFormat>CAN-{0000000}</displayFormat>
    <label>Candidate Number</label>
    <type>AutoNumber</type>
</CustomField>