force-app/main/default/objects/Candidate__c/fields/Candidate_Sourced_By__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Sourced_By__c</fullName>
    <label>Candidate Sourced By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>