force-app/main/default/objects/Candidate__c/fields/Career_Conducted_by__c.field-meta.xml
<CustomField>
    <fullName>Career_Conducted_by__c</fullName>
    <label>Career Conducted by</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andrew Moore</fullName>
            </value>
            <value>
                <fullName>Brady Murray</fullName>
            </value>
            <value>
                <fullName>Diljeet Masuda</fullName>
            </value>
            <value>
                <fullName>Jonathan Gruber</fullName>
            </value>
            <value>
                <fullName>Joy Avedesian</fullName>
            </value>
            <value>
                <fullName>Rachyll Tenny</fullName>
            </value>
            <value>
                <fullName>Scott Grove</fullName>
            </value>
            <value>
                <fullName>Scott Primm</fullName>
            </value>
            <value>
                <fullName>Tim Denton</fullName>
            </value>
            <value>
                <fullName>Van Hess</fullName>
            </value>
            <value>
                <fullName>Brooke Ianni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>