force-app/main/default/objects/Candidate__c/fields/Career_Presentation_Conducted_By__c.field-meta.xml
<CustomField>
    <fullName>Career_Presentation_Conducted_By__c</fullName>
    <label>Career Presentation Conducted By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>