force-app/main/default/objects/Candidate__c/fields/Career_Presentation_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Career_Presentation_Date_Completed__c</fullName>
    <label>Career Presentation Date Completed</label>
    <type>Date</type>
</CustomField>