force-app/main/default/objects/Candidate__c/fields/Career_Presentation_Date_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Career_Presentation_Date_Scheduled__c</fullName>
    <label>Career Presentation Date Scheduled</label>
    <type>Date</type>
</CustomField>