force-app/main/default/objects/Candidate__c/fields/Career_Presentation_ppt__c.field-meta.xml
<CustomField>
    <fullName>Career_Presentation_ppt__c</fullName>
    <label>Career Presentation ppt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>