force-app/main/default/objects/Candidate__c/fields/Career_Presentation_Tally__c.field-meta.xml
<CustomField>
    <fullName>Career_Presentation_Tally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Career Presentation Tally</label>
    <type>Checkbox</type>
</CustomField>