force-app/main/default/objects/Candidate__c/fields/College_Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>College_Graduation_Date__c</fullName>
    <label>College Graduation Date</label>
    <type>Date</type>
</CustomField>