force-app/main/default/objects/Candidate__c/fields/Contract_Career_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Contract_Career_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Career Indicator</label>
    <type>Checkbox</type>
</CustomField>