force-app/main/default/objects/Candidate__c/fields/Contract_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Deadline_Date__c</fullName>
    <description>The current contract deadline (considers extensions).</description>
    <formula>IF(
    Extension_Granted__c = TRUE &amp;&amp; NOT(ISBLANK(Extended_End_Date__c)),
    Extended_End_Date__c,
    Contract_End_Date__c
)</formula>
    <inlineHelpText>The effective contract deadline date (considers extensions).</inlineHelpText>
    <label>Contract Deadline Date</label>
    <type>Date</type>
</CustomField>