force-app/main/default/objects/Candidate__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>Contract expiration date. For Contract B, this is Start_Date__c + 4 months.</description>
    <inlineHelpText>The date this contract expires. For Contract B agents, this is 4 months from start date.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>