force-app/main/default/objects/Candidate__c/fields/Contract_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Contract_Outcome__c</fullName>
    <description>Final outcome of the contract. Tracks whether agent is active, transitioned to Contract A, or was terminated.</description>
    <inlineHelpText>Select the current contract status or final outcome.</inlineHelpText>
    <label>Contract Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Transitioned to A</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>