force-app/main/default/objects/Candidate__c/fields/Contract_Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status_Indicator__c</fullName>
    <description>Visual indicator of contract status. Green = on track or met, Yellow = approaching deadline, Red = at risk.</description>
    <formula>IF(
    NOT(ISPICKVAL(Contract_Type__c, &apos;Contract B&apos;)),
    &apos;N/A&apos;,
    IF(
        ISPICKVAL(Contract_Outcome__c, &apos;Transitioned to A&apos;),
        &apos;✓ Transitioned&apos;,
        IF(
            ISPICKVAL(Contract_Outcome__c, &apos;Terminated&apos;),
            &apos;✗ Terminated&apos;,
            IF(
                Requirements_Met__c = TRUE,
                &apos;🟢 Met Requirements&apos;,
                IF(
                    Days_Until_Contract_End__c &lt;= 30,
                    &apos;🔴 At Risk (&apos; &amp; TEXT(Days_Until_Contract_End__c) &amp; &apos; days)&apos;,
                    IF(
                        Days_Until_Contract_End__c &lt;= 60,
                        &apos;🟡 Approaching (&apos; &amp; TEXT(Days_Until_Contract_End__c) &amp; &apos; days)&apos;,
                        &apos;🟢 Active (&apos; &amp; TEXT(Days_Until_Contract_End__c) &amp; &apos; days)&apos;
                    )
                )
            )
        )
    )
)</formula>
    <inlineHelpText>Quick status indicator: Green=OK, Yellow=Approaching Deadline, Red=At Risk</inlineHelpText>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>