force-app/main/default/objects/Candidate__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Contract A</fullName>
            </value>
            <value>
                <fullName>Career Contract</fullName>
            </value>
            <value>
                <fullName>College Intern</fullName>
            </value>
            <value>
                <fullName>Contract B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>