force-app/main/default/objects/Candidate__c/fields/CP_Conducted_By__c.field-meta.xml
<CustomField>
    <fullName>CP_Conducted_By__c</fullName>
    <description>Interviewer who conducted the CP Interview</description>
    <label>CP Conducted By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interviewers</valueSetName>
    </valueSet>
</CustomField>