force-app/main/default/objects/Candidate__c/fields/Current_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupation__c</fullName>
    <label>Current Occupation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>