force-app/main/default/objects/Candidate__c/fields/Date_first_met_nominator__c.field-meta.xml
<CustomField>
    <fullName>Date_first_met_nominator__c</fullName>
    <label>Date first met nominator</label>
    <type>Date</type>
</CustomField>