force-app/main/default/objects/Candidate__c/fields/Days_Until_Contract_End__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Contract_End__c</fullName>
    <description>Number of days until contract expires. Uses Extended_End_Date if extension granted, otherwise Contract_End_Date.</description>
    <formula>IF(
    Extension_Granted__c = TRUE &amp;&amp; NOT(ISBLANK(Extended_End_Date__c)),
    Extended_End_Date__c - TODAY(),
    IF(
        NOT(ISBLANK(Contract_End_Date__c)),
        Contract_End_Date__c - TODAY(),
        NULL
    )
)</formula>
    <inlineHelpText>Days remaining until contract deadline (considers extensions).</inlineHelpText>
    <label>Days Until Contract End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>