force-app/main/default/objects/Candidate__c/fields/Degree_Earned__c.field-meta.xml
<CustomField>
    <fullName>Degree_Earned__c</fullName>
    <label>Degree Earned</label>
    <type>TextArea</type>
</CustomField>