force-app/main/default/objects/Candidate__c/fields/Degree_Major__c.field-meta.xml
<CustomField>
    <fullName>Degree_Major__c</fullName>
    <label>Degree Major</label>
    <length>60</length>
    <type>Text</type>
</CustomField>