force-app/main/default/objects/Candidate__c/fields/Designations__c.field-meta.xml
<CustomField>
    <fullName>Designations__c</fullName>
    <label>Designations</label>
    <type>TextArea</type>
</CustomField>