force-app/main/default/objects/Candidate__c/fields/Device_Encryption_Scheduled_for__c.field-meta.xml
<CustomField>
    <fullName>Device_Encryption_Scheduled_for__c</fullName>
    <label>Device Encryption Scheduled for</label>
    <type>DateTime</type>
</CustomField>