force-app/main/default/objects/Candidate__c/fields/Device_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Device_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Device Inspection</label>
    <referenceTo>Device_Inspection__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>