force-app/main/default/objects/Candidate__c/fields/Device_Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>Device_Inspection_Status__c</fullName>
    <description>Results of inspection of new recruit&apos;s device.</description>
    <label>Device Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Scheduled</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>