force-app/main/default/objects/Candidate__c/fields/EducationScore__c.field-meta.xml
<CustomField>
    <fullName>EducationScore__c</fullName>
    <formula>IF(
  NOT(ISBLANK(College_Graduation_Date__c)),
  1,
  IF(ISBLANK(College_Graduation_Date__c), 0, NULL)
)</formula>
    <label>Education Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>