force-app/main/default/objects/Candidate__c/fields/Extended_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Extended_End_Date__c</fullName>
    <description>New contract end date after extension is granted. Extension_Granted_Date + 4 months.</description>
    <inlineHelpText>The new contract end date after extension (4 months from extension grant date).</inlineHelpText>
    <label>Extended End Date</label>
    <type>Date</type>
</CustomField>