force-app/main/default/objects/Candidate__c/fields/Extension_Granted__c.field-meta.xml
<CustomField>
    <fullName>Extension_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Contract B agent has been granted an extension due to pipeline in progress.</description>
    <inlineHelpText>Check this box when granting a 4-month extension to a Contract B agent who has opportunities in the pipeline.</inlineHelpText>
    <label>Extension Granted</label>
    <type>Checkbox</type>
</CustomField>