force-app/main/default/objects/Candidate__c/fields/Extension_Granted_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Granted_Date__c</fullName>
    <description>Date when the contract extension was approved.</description>
    <inlineHelpText>The date when the extension was granted to this Contract B agent.</inlineHelpText>
    <label>Extension Granted Date</label>
    <type>Date</type>
</CustomField>