force-app/main/default/objects/Candidate__c/fields/External_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_ID__c</fullName>
    <label>External Contact ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>