force-app/main/default/objects/Candidate__c/fields/Financing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Financing_Start_Date__c</fullName>
    <label>Financing Start Date</label>
    <type>Date</type>
</CustomField>