force-app/main/default/objects/Candidate__c/fields/FINRA_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>FINRA_Registration_Date__c</fullName>
    <label>FINRA Registration Date</label>
    <type>Date</type>
</CustomField>