force-app/main/default/objects/Candidate__c/fields/FYC_Progress_Percent__c.field-meta.xml
<CustomField>
    <fullName>FYC_Progress_Percent__c</fullName>
    <description>Percentage of FYC requirement met (toward $2,500).</description>
    <formula>IF(
    Total_FYC__c &gt; 0,
    MIN(Total_FYC__c / 2500, 1),
    0
)</formula>
    <inlineHelpText>Progress toward $2,500 FYC requirement (capped at 100%).</inlineHelpText>
    <label>FYC Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>