force-app/main/default/objects/Candidate__c/fields/GA_Interview_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>GA_Interview_Date_Completed__c</fullName>
    <label>GA Interview Date Completed</label>
    <type>Date</type>
</CustomField>