force-app/main/default/objects/Candidate__c/fields/GA_Interview_Date_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>GA_Interview_Date_Scheduled__c</fullName>
    <label>GA Interview Date Scheduled</label>
    <type>Date</type>
</CustomField>