force-app/main/default/objects/Candidate__c/fields/GA_Interview_Tally__c.field-meta.xml
<CustomField>
    <fullName>GA_Interview_Tally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GA Interview Tally</label>
    <type>Checkbox</type>
</CustomField>