force-app/main/default/objects/Candidate__c/fields/Greater_than_120K__c.field-meta.xml
<CustomField>
    <fullName>Greater_than_120K__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Greater than $120K</label>
    <type>Checkbox</type>
</CustomField>