force-app/main/default/objects/Candidate__c/fields/Health_Insurance_License__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Insurance License</label>
    <type>Checkbox</type>
</CustomField>