force-app/main/default/objects/Candidate__c/fields/Highest_Level_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Highest_Level_Achieved__c</fullName>
    <label>Highest Level Achieved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-Prequal</fullName>
                <default>true</default>
                <label>0-Prequal</label>
            </value>
            <value>
                <fullName>Ci_1st</fullName>
                <label>Ci(1st)</label>
            </value>
            <value>
                <fullName>Align (2nd)</fullName>
            </value>
            <value>
                <fullName>Plan_3rd</fullName>
                <label>Plan (3rd)</label>
            </value>
            <value>
                <fullName>Present-4th</fullName>
                <label>Present(4th)</label>
            </value>
            <value>
                <fullName>Optional_5th</fullName>
                <label>Optional (5th)</label>
            </value>
            <value>
                <fullName>6-Offer Acc</fullName>
            </value>
            <value>
                <fullName>7-Contracted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>