force-app/main/default/objects/Candidate__c/fields/Hogan_Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Hogan_Date_Assigned__c</fullName>
    <label>Hogan Date Assigned</label>
    <type>Date</type>
</CustomField>