force-app/main/default/objects/Candidate__c/fields/Hogan_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Hogan_Date_Completed__c</fullName>
    <label>Hogan Date Completed</label>
    <type>Date</type>
</CustomField>