force-app/main/default/objects/Candidate__c/fields/Hogan_Tally__c.field-meta.xml
<CustomField>
    <fullName>Hogan_Tally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hogan Tally</label>
    <type>Checkbox</type>
</CustomField>