force-app/main/default/objects/Candidate__c/fields/How_met__c.field-meta.xml
<CustomField>
    <fullName>How_met__c</fullName>
    <label>How met</label>
    <type>TextArea</type>
</CustomField>