force-app/main/default/objects/Candidate__c/fields/Income_Greater_than_75K__c.field-meta.xml
<CustomField>
    <fullName>Income_Greater_than_75K__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does candidate currently live in either Nevada or Utah and earn more than $75000?</inlineHelpText>
    <label>Income Greater than 75K</label>
    <type>Checkbox</type>
</CustomField>