force-app/main/default/objects/Candidate__c/fields/Insurance_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Licensed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Licensed</label>
    <type>Checkbox</type>
</CustomField>