force-app/main/default/objects/Candidate__c/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <label>Languages</label>
    <type>TextArea</type>
</CustomField>