force-app/main/default/objects/Candidate__c/fields/Last_meeting_held__c.field-meta.xml
<CustomField>
    <fullName>Last_meeting_held__c</fullName>
    <label>Last meeting held</label>
    <type>Date</type>
</CustomField>