force-app/main/default/objects/Candidate__c/fields/Life_Insurance_License__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Life Insurance License</label>
    <type>Checkbox</type>
</CustomField>