force-app/main/default/objects/Candidate__c/fields/LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile__c</fullName>
    <description>LinkedIn profile URL for the candidate</description>
    <label>LinkedIn Profile</label>
    <type>Url</type>
</CustomField>