force-app/main/default/objects/Candidate__c/fields/MDE200__c.field-meta.xml
<CustomField>
    <fullName>MDE200__c</fullName>
    <label>MDE200</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>